--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -1,2 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources></resources>
+<resources>
+<!--    <color name="text">#F5CAC9</color>-->
+    <color name="text">#0C1B3A</color>
+    <color name="text2">#F4F7FD</color>
+    <color name="bg">#0C1B3A</color>
+    <color name="white">#162544</color>
+    <color name="card">#162544</color>
+    <color name="blue">#147EFF</color>
+    <color name="background">#0C1B3A</color>
+</resources>
